[package]

name = "rustup-utils"
version = "1.14.0"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "Utility functions for rustup"

documentation = "http://rust-lang-nursery.github.io/rustup.rs/rustup_utils/index.html"
homepage = "https://github.com/rust-lang-nursery/rustup.rs"
repository = "https://github.com/rust-lang-nursery/rustup.rs"

license = "MIT OR Apache-2.0"

[dependencies]
download = { path = "../download" }
error-chain = "0.12"
libc = "0.2.0"
rand = "0.5.2"
remove_dir_all = "0.5.1"
scopeguard = "0.3.0"
semver = "0.9.0"
sha2 = "0.7.0"
toml = "0.4"
url = "1.1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["combaseapi", "errhandlingapi", "fileapi", "handleapi",
    "ioapiset", "minwindef", "processthreadsapi", "shlobj", "shtypes", "userenv", "winbase", "winerror", "winnt", "winioctl"] }
winreg = "0.5.0"
